Modification nommage application de "app" vers "clientscoiffmanager".

--- a/clientscoiffmanager/src/main/res/layout/activity_rendezvous.xml
+++ b/clientscoiffmanager/src/main/res/layout/activity_rendezvous.xml
@@ -13,12 +13,15 @@
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:gravity="center_horizontal">
 
             <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="fill_parent"
-                android:layout_height="fill_parent">
+                android:layout_height="fill_parent"
+                android:gravity="center_vertical|center_horizontal"
+                android:background="@android:color/background_light">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -33,25 +36,52 @@
                     android:focusableInTouchMode="true" />
             </LinearLayout>
 
-            <ImageButton
+            <Space
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/RV_addTrvButton"
-                android:src="@android:drawable/ic_input_add"
-                android:contentDescription="@string/ajouterTravail"
-                android:adjustViewBounds="false" />
+                android:layout_height="15dp"
+                android:layout_gravity="center_horizontal" />
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:gravity="center_vertical|center_horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/ajouterTravail"
+                    android:id="@+id/addWorkText" />
+
+                <ImageButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/RV_addTrvButton"
+                    android:src="@android:drawable/ic_input_add"
+                    android:contentDescription="@string/ajouterTravail"
+                    android:adjustViewBounds="false" />
+
+            </LinearLayout>
 
             <ListView
                 android:layout_width="wrap_content"
                 android:layout_height="200dp"
-                android:id="@+id/RV_travauxList"/>
+                android:id="@+id/RV_travauxList"
+                android:background="@android:color/background_light" />
 
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="15dp"
+                android:layout_gravity="center_horizontal" />
 
             <EditText
                 android:layout_width="fill_parent"
                 android:layout_height="150dp"
                 android:id="@+id/RV_descText"
-                android:singleLine="false" />
+                android:singleLine="false"
+                android:gravity="left|top"
+                android:background="@android:color/background_light" />
 
             <Button
                 android:layout_width="wrap_content"
