--- a/clientscoiffmanager/src/main/res/layout/activity_rendezvous_list.xml
+++ b/clientscoiffmanager/src/main/res/layout/activity_rendezvous_list.xml
@@ -1,27 +1,45 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.boorce.clientscoiffmanager.RendezVousListActivity">
+    android:orientation="vertical"
+    tools:context="com.boorce.clientscoiffmanager.RendezVousListActivity"
+    android:gravity="center_horizontal">
 
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/txt_addButton"
-        android:id="@+id/RVL_addButton"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:singleLine="true"
-        android:src="@android:drawable/ic_input_add" />
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:gravity="center_vertical|center_horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/ajouterRendezVous"
+            android:id="@+id/addRdvText"
+            android:layout_alignBottom="@+id/RVL_addButton"
+            android:layout_toStartOf="@+id/RVL_addButton" />
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/txt_addButton"
+            android:id="@+id/RVL_addButton"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:singleLine="true"
+            android:src="@android:drawable/ic_input_add" />
+    </LinearLayout>
 
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/RVL_addButton"
         android:id="@+id/RVL_rendezVousList"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:background="@android:color/background_light" />
 
 
-</RelativeLayout>
+</LinearLayout>
