--- a/clientscoiffmanager/src/main/res/layout/activity_travaux_list.xml
+++ b/clientscoiffmanager/src/main/res/layout/activity_travaux_list.xml
@@ -1,25 +1,41 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.boorce.clientscoiffmanager.TravauxListActivity">
+    android:orientation="vertical"
+    tools:context="com.boorce.clientscoiffmanager.TravauxListActivity"
+    android:gravity="center_horizontal">
 
-    <ImageButton
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/TL_addButton"
-        android:layout_gravity="center_horizontal"
-        android:src="@android:drawable/ic_input_add"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:gravity="center_vertical|center_horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/ajouterTravail"
+            android:id="@+id/addNewTrvText" />
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/TL_addButton"
+            android:layout_gravity="center_horizontal"
+            android:src="@android:drawable/ic_input_add"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true" />
+    </LinearLayout>
 
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/TL_addButton"
         android:id="@+id/TL_travauxList"
-        android:layout_alignParentStart="true"/>
+        android:layout_alignParentStart="true"
+        android:background="@android:color/background_light" />
 
-</RelativeLayout>
+</LinearLayout>
