Corrections mineurs. Prise en charge de la sauvegarde des données en automatique via Android.

--- a/clientscoiffmanager/src/main/res/layout/activity_travail.xml
+++ b/clientscoiffmanager/src/main/res/layout/activity_travail.xml
@@ -21,7 +21,9 @@
         android:layout_below="@+id/textView"
         android:layout_centerHorizontal="true"
         android:singleLine="true"
-        android:background="@android:color/background_light" />
+        android:background="@android:color/background_light"
+        android:minLines="1"
+        android:minWidth="150dp" />
 
     <Button
         android:layout_width="wrap_content"
