--- a/clientscoiffmanager/src/main/res/layout/activity_rendezvous.xml
+++ b/clientscoiffmanager/src/main/res/layout/activity_rendezvous.xml
@@ -65,7 +65,7 @@
 
             <ListView
                 android:layout_width="wrap_content"
-                android:layout_height="200dp"
+                android:layout_height="150dp"
                 android:id="@+id/RV_travauxList"
                 android:background="@android:color/background_light" />
 
@@ -82,6 +82,24 @@
                 android:singleLine="false"
                 android:gravity="left|top"
                 android:background="@android:color/background_light" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="15dp" />
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/RV_addPhotoButton"
+                android:src="@android:drawable/ic_menu_camera" />
+
+            <GridView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/RV_photoList"
+                android:background="@android:color/background_light"
+                android:longClickable="true"
+                android:numColumns="4" />
 
             <Button
                 android:layout_width="wrap_content"
