--- a/clientscoiffmanager/src/main/res/layout/activity_travail.xml
+++ b/clientscoiffmanager/src/main/res/layout/activity_travail.xml
@@ -6,14 +6,6 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.boorce.clientscoiffmanager.TravailActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/travailName"
-        android:id="@+id/textView"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
-
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -23,7 +15,17 @@
         android:singleLine="true"
         android:background="@android:color/background_light"
         android:minLines="1"
-        android:minWidth="150dp" />
+        android:minWidth="150dp"
+        android:autoText="false"
+        android:clickable="false" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/travailName"
+        android:id="@+id/textView"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
     <Button
         android:layout_width="wrap_content"
